impls/monero.dart/lib/src/generated_bindings_beldex.g.dart


  late final _BELDEX_TransactionInfo_unlockTimePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_unlockTime');
  late final _BELDEX_TransactionInfo_unlockTime =
      _BELDEX_TransactionInfo_unlockTimePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_hash(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_hash(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_hashPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_TransactionInfo_hash');
  late final _BELDEX_TransactionInfo_hash = _BELDEX_TransactionInfo_hashPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_timestamp(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_timestamp(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_timestampPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_timestamp');
  late final _BELDEX_TransactionInfo_timestamp =
      _BELDEX_TransactionInfo_timestampPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_paymentId(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_paymentId(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_paymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_TransactionInfo_paymentId');
  late final _BELDEX_TransactionInfo_paymentId =
      _BELDEX_TransactionInfo_paymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_transfers_count(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _BELDEX_TransactionInfo_transfers_count(
      txInfo_ptr,
    );
  }

  late final _BELDEX_TransactionInfo_transfers_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionInfo_transfers_count');
  late final _BELDEX_TransactionInfo_transfers_count =
      _BELDEX_TransactionInfo_transfers_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_TransactionInfo_transfers_amount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int index,
  ) {
    return _BELDEX_TransactionInfo_transfers_amount(
      txInfo_ptr,
      index,
    );
  }

  late final _BELDEX_TransactionInfo_transfers_amountPtr = _lookup<
          ffi
          .NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'BELDEX_TransactionInfo_transfers_amount');
  late final _BELDEX_TransactionInfo_transfers_amount =
      _BELDEX_TransactionInfo_transfers_amountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> BELDEX_TransactionInfo_transfers_address(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int address,
  ) {
    return _BELDEX_TransactionInfo_transfers_address(
      txInfo_ptr,
      address,
    );
  }

  late final _BELDEX_TransactionInfo_transfers_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_TransactionInfo_transfers_address');
  late final _BELDEX_TransactionInfo_transfers_address =
      _BELDEX_TransactionInfo_transfers_addressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  int BELDEX_TransactionHistory_count(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _BELDEX_TransactionHistory_count(
      txHistory_ptr,
    );
  }

  late final _BELDEX_TransactionHistory_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionHistory_count');
  late final _BELDEX_TransactionHistory_count =
      _BELDEX_TransactionHistory_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_TransactionHistory_transaction(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    int index,
  ) {
    return _BELDEX_TransactionHistory_transaction(
      txHistory_ptr,
      index,
    );
  }

  late final _BELDEX_TransactionHistory_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_TransactionHistory_transaction');
  late final _BELDEX_TransactionHistory_transaction =
      _BELDEX_TransactionHistory_transactionPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Void> BELDEX_TransactionHistory_transactionById(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    ffi.Pointer<ffi.Char> id,
  ) {
    return _BELDEX_TransactionHistory_transactionById(
      txHistory_ptr,
      id,
    );
  }

  late final _BELDEX_TransactionHistory_transactionByIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'BELDEX_TransactionHistory_transactionById');
  late final _BELDEX_TransactionHistory_transactionById =
      _BELDEX_TransactionHistory_transactionByIdPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void BELDEX_TransactionHistory_refresh(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _BELDEX_TransactionHistory_refresh(
      txHistory_ptr,
    );
  }

  late final _BELDEX_TransactionHistory_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_TransactionHistory_refresh');
  late final _BELDEX_TransactionHistory_refresh =
      _BELDEX_TransactionHistory_refreshPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  void BELDEX_TransactionHistory_setTxNote(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    ffi.Pointer<ffi.Char> txid,
    ffi.Pointer<ffi.Char> note,
  ) {
    return _BELDEX_TransactionHistory_setTxNote(
      txHistory_ptr,
      txid,
      note,
    );
  }

  late final _BELDEX_TransactionHistory_setTxNotePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_TransactionHistory_setTxNote');
  late final _BELDEX_TransactionHistory_setTxNote =
      _BELDEX_TransactionHistory_setTxNotePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> BELDEX_AddressBookRow_extra(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _BELDEX_AddressBookRow_extra(
      addressBookRow_ptr,
    );
  }

  late final _BELDEX_AddressBookRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_AddressBookRow_extra');
  late final _BELDEX_AddressBookRow_extra = _BELDEX_AddressBookRow_extraPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_AddressBookRow_getAddress(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _BELDEX_AddressBookRow_getAddress(
      addressBookRow_ptr,
    );
  }

  late final _BELDEX_AddressBookRow_getAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_AddressBookRow_getAddress');
  late final _BELDEX_AddressBookRow_getAddress =
      _BELDEX_AddressBookRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> BELDEX_AddressBookRow_getDescription(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _BELDEX_AddressBookRow_getDescription(
      addressBookRow_ptr,
    );
  }

  late final _BELDEX_AddressBookRow_getDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('BELDEX_AddressBookRow_getDescription');
  late final _BELDEX_AddressBookRow_getDescription =
      _BELDEX_AddressBookRow_getDescriptionPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_AddressBookRow_getRowId(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _BELDEX_AddressBookRow_getRowId(
      addressBookRow_ptr,
    );
  }

  late final _BELDEX_AddressBookRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_AddressBookRow_getRowId');
  late final _BELDEX_AddressBookRow_getRowId =
      _BELDEX_AddressBookRow_getRowIdPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int BELDEX_AddressBook_getAll_size(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _BELDEX_AddressBook_getAll_size(
      addressBook_ptr,
    );
  }

  late final _BELDEX_AddressBook_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'BELDEX_AddressBook_getAll_size');
  late final _BELDEX_AddressBook_getAll_size =
      _BELDEX_AddressBook_getAll_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> BELDEX_AddressBook_getAll_byIndex(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int index,
  ) {
    return _BELDEX_AddressBook_getAll_byIndex(
      addressBook_ptr,
      index,
    );
  }

  late final _BELDEX_AddressBook_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('BELDEX_AddressBook_getAll_byIndex');
  late final _BELDEX_AddressBook_getAll_byIndex =
      _BELDEX_AddressBook_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  bool BELDEX_AddressBook_addRow(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    ffi.Pointer<ffi.Char> dst_addr,
    ffi.Pointer<ffi.Char> payment_id,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _BELDEX_AddressBook_addRow(
      addressBook_ptr,
      dst_addr,
      payment_id,
      description,
    );
  }

  late final _BELDEX_AddressBook_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('BELDEX_AddressBook_addRow');
  late final _BELDEX_AddressBook_addRow =
      _BELDEX_AddressBook_addRowPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool BELDEX_AddressBook_deleteRow(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int rowId,
  ) {
    return _BELDEX_AddressBook_deleteRow(
      addressBook_ptr,
      rowId,
    );
  }

  late final _BELDEX_AddressBook_deleteRowPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Size)>>(
      'BELDEX_AddressBook_deleteRow');
  late final _BELDEX_AddressBook_deleteRow = _BELDEX_AddressBook_deleteRowPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>, int)>();

  bool BELDEX_AddressBook_setDescription(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int rowId,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _BELDEX_AddressBook_setDescription(
      addressBook_ptr,
      rowId,
      description,
    );
  }
